# high-tps-decode-frontier

./: .gitignore  .modalignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/plans/: v4-flash-baseline-plan.md
benchmarks/scripts/: v4-flash-vllm-smoke.sh
benchmarks/templates/: result-template.md
docs/: remote-kernel-runs.md
docs/adr/: 0001-inferencex-style-serving-frontier.md
kernels/: README.md
kernels/practice/: dense-attention-baseline.md
kernels/templates/: practice-item-template.md
sources/: README.md
sources/github/: dao-ailab-quack-readme.md
sources/html/: baseten-ramp-plan-deepseek-v4-flash-kernel-depth-blackwell.html  deepseek-api-news-deepseek-v4-preview-release.html  hazyresearch-look-ma-no-bubbles-megakernel.html  inferencemax-open-source-inference-benchmarking.html  model-performance-ramp-plan-deepseek-v4-flash-kernel-depth-blackwell.html  pytorch-tokenspeed-qwen35-agentic-workloads.html  sglang-deepseek-v4-cookbook.html  sparse-attention-video-diffusion-fa4-follow-on-ramp.html  tilert-speed-as-the-next-scaling-law-zh.html  tilert-speed-as-the-next-scaling-law.html  vllm-deepseek-v4-blog.html  vllm-recipes-deepseek-v4-flash.html
sources/huggingface/: longbench-v2-dataset-card.html  openai-mrcr-dataset-card.html
sources/social/: x-hi-tysam-coco-thread-screenshot-transcript.md
src/high_tps_decode_frontier/: __init__.py
wiki/: index.md  log.md
wiki/artifacts/: speculative-decode-robustness-map.md  v4-flash-kernel-map.md
wiki/investigations/: v4-flash-inferencex-frontier.md
(+104 files in other folders)
