[project]
name = "high-tps-decode-frontier"
version = "0.1.0"
description = "Benchmark-driven kernel investigations for high-TPS LLM decode"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "torch>=2.8",
]

[project.optional-dependencies]
remote = [
  "modal>=1.0",
]

[project.scripts]
bench-dense-attention = "high_tps_decode_frontier.kernels.bench_dense_attention:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/high_tps_decode_frontier"]
